--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>شجرة آل عمير - نظام إدارة الأنساب</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <meta name="theme-color" content="#10b981">
+    <meta name="description" content="نظام شامل ومتطور لإدارة شجرة آل عمير والأنساب، وتوثيق تاريخ القبيلة وحفظ ذكرياتها وقصصها في مكان واحد آمن ومنظم">
   </head>
   <body>
     <div id="root"></div>
